# python-course

./: .gitignore  .gitignore~  Pipfile  README  README.md  course-structure-3day.txt  course-structure-5day.txt  course-structure.txt  example.py  feedback.odt  requirements.txt  setup-venv.sh
001-what-is-python/: index.html
002-basic-control-structures/: Answers.ipynb  Basic control structures II.ipynb  Basic control structures III.ipynb  Basic control structures.ipynb  Python Course - 002a - And so we begin.ipynb  halts.geojson
003-scripting-tasks/: index.html
004-inflammation/: A New Treatment for Arthritis.ipynb  Answers.ipynb
004-modules/: A New Treatment for Arthritis.ipynb
005-statistics/: index.html
006-files-numpy/: Latency.ipynb  bad-python.py  bad_python.py  better-python.py  better_python.py  network-test-client-complete.py  network-test-client-partial-1.py  network-test-client.py  network-test-client2-complete.py  network-test-client2-partial1.py  network-test-server.py  (+6 more)
006-latency-continued/: .gitignore  README.md  latency.yaml  setup.cfg  setup.py
006-latency-continued/latency/: MANIFEST.in  __init__.py  client.py  config.py  runner.py  tester.py  timer.py
006-latency-continued/latency/scripts/: latency.py
006-latency-continued/tests/: test_runner.py
015-machine-learning/fat_learn/: .gitignore  LICENSE.md  README.md  pyproject.toml
015-machine-learning/fat_learn/.github/workflows/: build.yaml
015-machine-learning/fat_learn/fat_learn/: carpark.py
021-conical-continued/magnum_opus/: Dockerfile  docker-compose.yml  requirements.txt  setup.cfg
021-conical-continued/magnum_opus/magnumopus/: __init__.py
021-conical-continued/magnum_opus/magnumopus/models/: substance.py
021-conical-continued/magnum_opus/magnumopus/resources/: substance.py
022-burette/.magnum_opus/: .env.local  .gitignore  Dockerfile  docker-compose.yml  requirements.txt  setup.cfg
022-burette/.magnum_opus/magnumopus/: __init__.py  config.py  initialize.py
022-burette/.magnum_opus/magnumopus/models/: __init__.py  base.py  substance.py
022-burette/.magnum_opus/magnumopus/repositories/: __init__.py  cqlalchemy_pantry.py  list_pantry.py  sqlalchemy_pantry.py
022-burette/.magnum_opus/magnumopus/resources/: __init__.py  substance.py
022-burette/.magnum_opus/magnumopus/schemas/: substance_schema.py
022-burette/.magnum_opus/tests/: conftest.py
022-burette/.magnum_opus/tests/application/: test_alembic_instruction_resource.py
022-burette/.magnum_opus/tests/domain/: test_alembic_instruction_handler.py
022-burette/magnum_opus_ii/: .coverage  docker-compose.yml  init_containers.sh  requirements.txt  setup.cfg
022-burette/magnum_opus_ii/magnumopus/: __init__.py  config.py  injection.py
022-burette/magnum_opus_ii/magnumopus/models/: __init__.py
022-burette/magnum_opus_ii/magnumopus/repositories/: pantry.py
022-burette/magnum_opus_ii/magnumopus/resources/: __init__.py  alembic_instruction.py
022-burette/magnum_opus_ii/magnumopus/schemas/: substance_schema.py
022-burette/magnum_opus_ii/magnumopus/services/: __init__.py  assessor.py
022-burette/magnum_opus_ii/tests/application/: .coverage  test_philosophers_stone.py
022-burette/magnum_opus_ii/tests/domain/: test_alembic.py
(+174 files in other folders)
