[metadata]
name = latency_tester
version = 0.0.1
author = Phil Weir
author_email = phil.weir@flaxandteal.co.uk
license = GPL
description = Latency tester for finding network performance
long-description = file:README.md

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pyyaml
    appdirs
    Click

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    latency_tester = latency.scripts.latency:cli