[metadata]
name = magnumopus
version = 0.0.1
author = Phil Weir
author_email = phil.weir@flaxandteal.co.uk
license = GPL
description = Service for cooking up a philosopher's stone
long-description = file:README.md

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    appdirs
    flask-restful
    flask-marshmallow
    flask-sqlalchemy
    flask-injector
    sqlalchemy-utils
    flask-cqlalchemy
    cassandra-driver
    marshmallow-sqlalchemy
    wheel
    flask

[options.extras_require]
dev =
    pytest
    pytest-pep8
    pytest-cov
    pytest-flask
    pytest-flask-sqlalchemy

[options.packages.find]
exclude =
    tests
